--- a/src/app/shopping-items/shopping-items.component.css
+++ b/src/app/shopping-items/shopping-items.component.css
@@ -1,14 +1,21 @@
-.container .h3{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.container .h3 {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+.products {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.product-grid3 {
+.product-card {
+  padding: 2%;
+  flex: 1 20%;
   font-family: Roboto, sans-serif;
   text-align: center;
   position: relative;
   z-index: 1;
 }
-.product-grid3:before {
+.product-card:before {
   content: "";
   height: 81%;
   width: 100%;
@@ -21,38 +28,39 @@
   z-index: -1;
   transition: all 0.5s ease 0s;
 }
-.product-grid3:hover:before {
+.product-card:hover:before {
   opacity: 1;
   height: 100%;
 }
-.product-grid3 .product-image3 {
+.product-card .product-image {
   position: relative;
+  max-width: 100%;
 }
-.product-grid3 .product-image3 a {
+.product-card .product-image a {
   display: block;
 }
-.product-grid3 .product-image3 img {
+.product-card .product-image img {
   width: 100%;
   height: auto;
 }
-.product-grid3 .pic-1 {
+.product-card .pic-1 {
   opacity: 1;
   transition: all 0.5s ease-out 0s;
 }
-.product-grid3:hover .pic-1 {
+.product-card:hover .pic-1 {
   opacity: 0;
 }
-.product-grid3 .pic-2 {
+.product-card .pic-2 {
   position: absolute;
   top: 0;
   left: 0;
   opacity: 0;
   transition: all 0.5s ease-out 0s;
 }
-.product-grid3:hover .pic-2 {
+.product-card:hover .pic-2 {
   opacity: 1;
 }
-.product-grid3 .social {
+.product-card .social {
   width: 120px;
   padding: 0;
   margin: 0 auto;
@@ -65,19 +73,19 @@
   transform: scale(0);
   transition: all 0.3s ease 0s;
 }
-.product-grid3:hover .social {
+.product-card:hover .social {
   opacity: 1;
   transform: scale(1);
 }
-.product-grid3:hover .product-discount-label,
-.product-grid3:hover .product-new-label,
-.product-grid3:hover .title {
+.product-card:hover .product-discount-label,
+.product-card:hover .product-new-label,
+.product-card:hover .title {
   opacity: 0;
 }
-.product-grid3 .social li {
+.product-card .social li {
   display: inline-block;
 }
-.product-grid3 .social li a {
+.product-card .social li a {
   color: palevioletred;
   background: #fff;
   font-size: 18px;
@@ -90,12 +98,12 @@
   display: block;
   transition: all 0.3s ease 0s;
 }
-.product-grid3 .social li a:hover {
+.product-card .social li a:hover {
   background: palevioletred;
   color: #fff;
 }
-.product-grid3 .product-discount-label,
-.product-grid3 .product-new-label {
+.product-card .product-discount-label,
+.product-card .product-new-label {
   background-color: palevioletred;
   color: #fff;
   font-size: 17px;
@@ -105,25 +113,24 @@
   top: 10px;
   transition: all 0.3s;
 }
-.product-grid3 .product-content {
+.product-card .product-content {
   z-index: -1;
   padding: 15px;
   text-align: center;
 }
-.product-grid3 .title {
+.product-card .title {
   font-size: 14px;
   text-transform: capitalize;
   margin: 0 0 7px;
   transition: all 0.3s ease 0s;
 }
-.product-grid3 .title a {
-  /* color: #414141; */
+.product-card .title a {
   font-size: 17px;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   color: black;
-
 }
-.product-grid3 .price {
+.product-card .price {
   color: palevioletred;
   font-weight: bold;
   font-size: 16px;
@@ -131,10 +138,10 @@
   font-weight: 600;
   margin-right: 2px;
   display: inline-block;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
-.product-grid3 .price span {
+.product-card .price span {
   color: #909090;
   font-size: 14px;
   font-weight: 500;
@@ -144,36 +151,54 @@
   display: inline-block;
   margin-top: -2px;
 }
-.product-grid3 .rating {
+.product-card .rating {
   padding: 0;
   margin: -22px 0 0;
   list-style: none;
   text-align: right;
   display: block;
 }
-.product-grid3 .rating li {
+.product-card .rating li {
   color: #ffd200;
   font-size: 13px;
   display: inline-block;
 }
-.product-grid3 .rating li.disable {
+.product-card .rating li.disable {
   color: #dcdcdc;
 }
-@media only screen and (max-width: 1200px) {
-  .product-grid3 .rating {
+/* @media only screen and (max-width: 1200px) {
+  .product-card .rating {
     margin: 0;
   }
 }
 @media only screen and (max-width: 990px) {
-  .product-grid3 {
+  .product-card {
     margin-bottom: 30px;
   }
-  .product-grid3 .rating {
+  .product-card .rating {
     margin: -22px 0 0;
   }
 }
 @media only screen and (max-width: 359px) {
-  .product-grid3 .rating {
+  .product-card .rating {
     margin: 0;
+  }
+} */
+
+@media only screen and (max-width: 600px) {
+  .container .h3 {
+    font-size: 18px;
+  }
+  .product-card {
+    flex: 1 46%;
+    margin: 0;
+  }
+
+  .product-content .title {
+    font-size: 16px;
+  }
+
+  .product-content .price {
+    font-size: 16px;
   }
 }
